Move fuzzing code out of utils
newtype implementation of opcodes::All

Removes unsafety when converting u8 -> All

safe implementation of All -> Ordinary

squashme: work around lack of associated constants

make opcode PR work with 1.14.0

add some opcode tests

Fix indentation in opcodes.rs

Fix comment on transaction version

Internalize unnecessarily exported macros

Bump secp to 0.12

Replace slow hex decoding function with optimized version

Fixes #207.

Remove unused Pair iterator and util::iter module

Add feature gated hex decode benchmark

bump version to 0.16

Bump rustc version to 1.22.0

it is annoying to have a difference between debug and print for hash

Fix typos

Run cargo bench on rustc nightly in travis, remote useless move

Add bitcoin_hashes dependency, rename some features

Because features and dependencies share the same namespace, and we want
to pass down the optional dependence on serde to bitcoin_hashes, we need
to rename the feature to something other than serde. Right now only
features can be passed down to dependencies.

Note that we could have also renamed the dependency to something like
serde-dep and kept the same feature name, however, dependency renaming
has only been available since cargo 0.27.0

Features that represent optional dependencies have been prefixed with
'use-'. The travis file has also been modified to conform to this
change.

Implement En/Decodable for sha256d::Hash

Convert codebase from util::hash to bitcoin_hashes

Also replace unsafe transmute with call to read_u64_into

Remove code deprecated by bitcoin_hashes from util::hash

Remove unused internal macro

Remove fuzz_util module

Not needed anymore as the bitcoin_hashes crate handles this.

Remove rust-crypto dependency

We no longer need rust-crypto after integrating bitcoin_hashes.

Fix typos and clarify some comment in blockdata, block, address (#230)

Remove Address::p2pk

There is no address format for p2pk.

add BIP157 (Client Side Block Filtering) Messages 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
-
 [package]
 name = "bitcoin"
-version = "0.15.1"
+version = "0.18.0"
 authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
 license = "CC0-1.0"
 homepage = "https://github.com/rust-bitcoin/rust-bitcoin/"
@@ -16,28 +15,30 @@ name = "bitcoin"
 path = "src/lib.rs"
 
 [features]
-fuzztarget = ["secp256k1/fuzztarget"]
-serde-decimal = ["serde", "strason"]
+fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
+unstable = []
+use-serde = ["serde", "bitcoin_hashes/serde"]
 
 [dependencies]
-bitcoin-bech32 = "0.8.0"
+bitcoin-bech32 = "0.9.0"
 byteorder = "1.2"
-rand = "0.3"
-rust-crypto = "0.2"
+bitcoin_hashes = "0.3"
 bitcoinconsensus = { version = "0.16", optional = true }
 
 [dependencies.serde]
 version = "1"
+features = ["derive"]
 optional = true
-
-[dependencies.strason]
-version = "0.4"
-optional = true
-default-features = false
 
 [dependencies.hex]
 version = "=0.3.2"
 
 [dependencies.secp256k1]
-version = "0.11"
+version = "0.12"
 features = [ "rand" ]
+
+[dev-dependencies]
+serde_derive = "1"
+serde_json = "1"
+serde_test = "1"
+tempfile = "3"
