--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -14,7 +14,7 @@ honggfuzz_fuzz = ["honggfuzz"]
 [dependencies]
 honggfuzz = { version = "0.5", optional = true }
 afl = { version = "0.4", optional = true }
-bitcoin = { path = "..", features = ["fuzztarget", "serde-decimal"] }
+bitcoin = { path = "..", features = ["fuzztarget"] }
 
 # Prevent this from interfering with workspaces
 [workspace]
@@ -37,13 +37,17 @@ name = "deserialize_address"
 path = "fuzz_targets/deserialize_address.rs"
 
 [[bin]]
-name = "deserialize_decimal"
-path = "fuzz_targets/deserialize_decimal.rs"
-
-[[bin]]
-name = "deserialize_udecimal"
-path = "fuzz_targets/deserialize_udecimal.rs"
+name = "deserialize_amount"
+path = "fuzz_targets/deserialize_amount.rs"
 
 [[bin]]
 name = "outpoint_string"
 path = "fuzz_targets/outpoint_string.rs"
+
+[[bin]]
+name = "deserialize_psbt"
+path = "fuzz_targets/deserialize_psbt.rs"
+
+[[bin]]
+name = "deser_net_msg"
+path = "fuzz_targets/deser_net_msg.rs"
